--- a/css/blog.css
+++ b/css/blog.css
@@ -6,9 +6,9 @@ h1{
 }
 
 .blog-post{
-  max-width: 600px;
+  max-width: 300px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   gap: 10px;
   margin: 0 auto;
 }
