--- a/css/media.css
+++ b/css/media.css
@@ -91,6 +91,14 @@
   .gallery-container {
     width: 550px;
   }
+
+
+.blog-post{
+  max-width: 600px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  
+}
 }
 
 @media only screen and (min-width: 1000px) {
