--- a/css/specific.css
+++ b/css/specific.css
@@ -18,7 +18,7 @@
   height: 300px;
 }
 
-.featuredmedia-specific-text{
+/* .featuredmedia-specific-text{
   position: relative;
   top: 7px;
 }
@@ -34,7 +34,7 @@ h4{
   opacity: 0.8;
   color: var(--secondary-color);
   font-weight: bold;
-}
+} */
 
 footer {
   margin-top: 15.8rem;
