--- a/css/media.css
+++ b/css/media.css
@@ -7,7 +7,7 @@
   }
   .prev,
   .next {
-    top: 124%;
+    top: 127%;
   }
 }
 
@@ -104,6 +104,10 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
+  .prev,
+  .next {
+    top: 130%;
+  }
 }
 
 @media only screen and (min-width: 1000px) {
@@ -121,7 +125,7 @@
   }
   .prev,
   .next {
-    top: 95%;
+    top: 130%;
   }
 }
 
@@ -132,7 +136,7 @@
 
   .prev,
   .next {
-    top: 95%;
+    top: 135%;
     margin: -62px 11rem;
   }
 }
